--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-08  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-ledger/gncEntryLedger.c: allow the user
+	  to enter any Action they wish.
+
 2003-03-06  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/dialog-hbcitrans.c: Include a latest
