* src/business/business-ledger/gncEntryLedgerLayout.c: reuse 	  the "sample" account string from the split-register to make 	  the account column a bit wider.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8047 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-03-09  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-ledger/gncEntryLedgerLayout.c: reuse
+	  the "sample" account string from the split-register to make
+	  the account column a bit wider.
+
 2003-03-08  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-ledger/gncEntryLedger.c: allow the user
