* src/gnome-utils/dialog-utils.h: Disabled declarations of 	  functions not used in QuickFill to bypass missing typedef 	  for GdkImlibImage
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8051 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-03-09 TomF changes for Gnome-2 branch, 4th batch
+
+	* src/gnome-utils/dialog-utils.h: Disabled declarations of 
+	  functions not used in QuickFill to bypass missing typedef
+	  for GdkImlibImage
+	* Next make problems are in:
+	    cursors.c, in function `gnc_set_busy_cursor'
+	    references to ghttp in gnc-http.c
+
 2003-03-09 TomF changes for Gnome-2 branch
 
 	* configure.in: Disabled gnome-print.  Added LIBGUPPI.
