update to release 1.8.2
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8052 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-09  Chris Lyttle  <chris@wilddev.net>
+
+	* configure.in: release 1.8.2
+	* NEWS: release 1.8.2
+
 2003-03-09  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-core/gncEmployee.[ch]: added APIs to
