2003-03-10  Christian Stimming  <stimming@tuhh.de>
	* po/glossary/da.po: Updated glossary translation by Keld Simonsen
	<keld@dkuug.dk>.

	* po/glossary/sv.po: Updated glossary translation by Christian
	Rose <menthos@menthos.com>.

	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
	<lorenzo.cappelletti@email.it>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8055 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-03-10  Christian Stimming  <stimming@tuhh.de>
+
+	* po/glossary/da.po: Updated glossary translation by Keld Simonsen
+	<keld@dkuug.dk>.
+
+	* po/glossary/sv.po: Updated glossary translation by Christian
+	Rose <menthos@menthos.com>.
+
+	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
+	<lorenzo.cappelletti@email.it>.
+
 2003-03-09  Chris Lyttle  <chris@wilddev.net>
 
 	* configure.in: release 1.8.2
