* src/network-utils/Makefile.am: add src/engine 	* src/network-utils/gnc-http.c: comment out ghttp usage
	Added by warlord:
	* src/network-utils/Makefile.am: remove GHTTP references


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8061 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-11 TomF changes for Gnome-2 branch, 5th batch
+
+	* src/network-utils/Makefile.am: add src/engine
+	* src/network-utils/gnc-http.c: comment out ghttp usage
+
+	Added by warlord:
+	* src/network-utils/Makefile.am: remove GHTTP references
+
 2003-03-09 TomF changes for Gnome-2 branch, 4th batch
 
 	* src/gnome-utils/dialog-utils.h: Disabled declarations of 
