* configure.in: get the configure script to actually attempt to do 	  something real in terms of gnome-print, gdk-pixbuf, and guppi.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8062 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-11  Derek Atkins  <derek@ihtfp.com>
+
+	* configure.in: get the configure script to actually attempt to do
+	  something real in terms of gnome-print, gdk-pixbuf, and guppi.
+
 2003-03-11 TomF changes for Gnome-2 branch, 5th batch
 
 	* src/network-utils/Makefile.am: add src/engine
