* configure.in: can't use AM_PATH_GDK_PIXBUF; that's a gnome-1 	  feature and doesn't work for gnome2
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8063 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-12  Derek Atkins  <derek@ihtfp.com>
+
+	* configure.in: can't use AM_PATH_GDK_PIXBUF; that's a gnome-1
+	  feature and doesn't work for gnome2
+
 2003-03-11  Derek Atkins  <derek@ihtfp.com>
 
 	* configure.in: get the configure script to actually attempt to do
