--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-03-12  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-core/gncInvoice.c:
+	* src/business/business-gnome/business-urls.c:
+	* src/business/business-gnome/dialog-invoice.c:
+	  Add strings to be translated for expense vouchers
+
 2003-03-11  Derek Atkins  <derek@ihtfp.com>
 
 	* src/scm/main-window.scm:  turn off the report-total by default
