* src/import-export/import-backend.c: 	* src/import-export/import-match-map.c: 	* src/import-export/import-match-map.h:           Chris Morgan's Baysian Matching code, to match transactions           based on Bayesian filtering of previously matched transactions.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8065 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,12 @@
 	* src/business/business-gnome/dialog-invoice.c:
 	  Add strings to be translated for expense vouchers
 
+	* src/import-export/import-backend.c:
+	* src/import-export/import-match-map.c:
+	* src/import-export/import-match-map.h:
+          Chris Morgan's Baysian Matching code, to match transactions
+          based on Bayesian filtering of previously matched transactions.
+	
 2003-03-11  Derek Atkins  <derek@ihtfp.com>
 
 	* src/scm/main-window.scm:  turn off the report-total by default
