--- a/ChangeLog
+++ b/ChangeLog
@@ -74,7 +74,14 @@
 	  If the nameList == NULL then add a blank line, to make sure
 	  the selector list is really empty, rather than defaulting to all of
 	  the accounts in the tree if there are none matching.
-	
+
+	  From HEAD:
+	* src/app-utils/gnc-ui-util.c:
+	* src/gnome/top-level.c:
+	  the Account Separator option was moved to the Accounts page --
+	  reference is correctly.
+	Fixes #106673
+
 2003-03-11  Derek Atkins  <derek@ihtfp.com>
 
 	* src/scm/main-window.scm:  turn off the report-total by default
