Fix problem where changing the reconciliation date of a "reverse balance" account would cause the proposed account balance to show the wrong sign.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8082 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,13 @@
 	* po/en_GB.po: updated translation by Nigel Titley
 	<nigel@titley.com>.
 	
+2003-03-14  David Hampton  <hampton@employees.org>
+
+	* src/gnome/window-reconcile.c (gnc_start_recn_date_changed):
+	Don't reverse the account balance here. The routine called to
+	retrieve the account balance has already taken care of reversing
+	the sign where necessary.
+
 2003-03-13  Derek Atkins  <derek@ihtfp.com>
 
 	* src/engine/Makefile.am: make sure to add INTLLIBS in case
