--- a/AUTHORS
+++ b/AUTHORS
@@ -149,6 +149,7 @@ Georg Lehner <Jorge.Lehner@gmx.net> Nicaraguan Spanish translation
 Ted Lemon <mellon@andare.fugue.com> for NetBSD port
 Yannick Le Ny <y-le-ny@ifrance.com> French translations
 Frederic Lespez <frederic.lespez@wanadoo.fr> French account templates fixes.
+Chao-Hsiung Liao <pesder.liao@msa.hinet.net> Traditional Chinese translation
 Grant Likely <glikely@nortelnetworks.com> gnome and engine patches
 Volodymyr M. Lisivka <lvm@mystery.lviv.net> Ukrainian translation
 Duarte Loreto <happyguy_pt@hotmail.com> message and documentation Portuguese translations
