2003-03-29  Christian Stimming  <stimming@tuhh.de>
        * src/engine/gnc-session.c: OpenBSD fix by Todd T. Fries
        <todd@flare.fries.net>

        * src/engine/Transaction.c: OpenBSD fix by Todd T. Fries
        <todd@flare.fries.net>: time_t is not long everywhere.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8105 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-29  Christian Stimming  <stimming@tuhh.de>
+
+	* src/engine/gnc-session.c: OpenBSD fix by Todd T. Fries
+	<todd@flare.fries.net>
+
+	* src/engine/Transaction.c: OpenBSD fix by Todd T. Fries
+	<todd@flare.fries.net>: time_t is not long everywhere.
+
 2003-03-25  Christian Stimming  <stimming@tuhh.de>
 
 	* po/zh_TW.po: Updated traditional Chinese complete translation by
