--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 
+2003-04-01  Derek Atkins  <derek@ihtfp.com>
+
+	* remove TomF's comments from files in batch 7; the
+	  ChangeLog is sufficient.
+
 2003-03-16 TomF changes for gnucash-gnome2-dev, 8th batch
+
 	* src/gnome-utils/cursors.c
 	  Replace calls of deprecated gtk_container_get_toplevels by
 	  gtk_window_list_toplevels
@@ -23,12 +29,12 @@
 	* src/gnome-utils/gtkselect.c
 	* src/gnome-utils/print-session.c
 	* src/gnome-utils/window-help.c
-	* src/gnome-utils/dialog-search.c
+	* src/gnome-search/dialog-search.c
 	* src/import-export/hbci/hbci-interaction.c
 	* src/import-export/hpci/hbci-progressmon.c
 	* src/register/register-gnome/combocell-gnome.c
 	* src/register/register-gnome/datecell-gnome.c
-	* src/register/register-gnome/gnucash.sheet.c
+	* src/register/register-gnome/gnucash-sheet.c
 	* src/register/register-gnome/table-gnome.c
 	* src/report/report-gnome/dialog-style-sheet.c
 
