2003-04-14  Christian Stimming  <stimming@tuhh.de>
	* po/de.po: Updated German translation. Changed "Kassenbericht" to
	"Kontobuch" and "Belastung/Gutschrift" to "Soll/Haben".

	* src/import-export/hbci/hbci-interaction.c: Fix some user
	messages where chip cards were confused with key files.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8231 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-14  Christian Stimming  <stimming@tuhh.de>
+
+	* po/de.po: Updated German translation. Changed "Kassenbericht" to
+	"Kontobuch" and "Belastung/Gutschrift" to "Soll/Haben".
+
+	* src/import-export/hbci/hbci-interaction.c: Fix some user
+	messages where chip cards were confused with key files.
+
 2003-04-12  Herbert Thoma  <herbie@hthoma.de>
 
         * src/backend/file/sixtp-dom-parsers.c
