--- a/po/glossary/de.po
+++ b/po/glossary/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnucash 1.7\n"
 "POT-Creation-Date: 2002-11-05 23:04+0100\n"
-"PO-Revision-Date: 2002-11-05 23:05+0100\n"
+"PO-Revision-Date: 2003-04-14 22:46+0200\n"
 "Last-Translator: Christian Stimming <stimming@tuhh.de>\n"
 "Language-Team: DE\n"
 "MIME-Version: 1.0\n"
@@ -525,7 +525,7 @@ msgstr "Buchführung"
 
 #. "A list of items; a book containing such a list"
 msgid "register"
-msgstr "Kassenbericht"
+msgstr "Kontobuch (1.8.2 und älter: Kassenbericht)"
 
 #. "A transaction that is divided into two or more parts"
 msgid "register entry: split transaction"
