* src/import-export/qif-import/qif-file.scm: Don't try to 	  parse values that begin "..." because it is clearly not 	  valid (regardless of the locale).  Fixes #109868.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8239 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,10 @@
 	  Enable changing the "ID" for different business objects.
 	  Fixes #108563.
 	
+	* src/import-export/qif-import/qif-file.scm: Don't try to
+	  parse values that begin "..." because it is clearly not
+	  valid (regardless of the locale).  Fixes #109868.
+
 2003-04-16  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/druid-hbci-initial.c,
