--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-21  Christian Stimming  <stimming@tuhh.de>
+
+	* po/de.po: Update German translation (latest transaction.scm
+	patch broke string freeze).
+
 2003-04-20  Derek Atkins  <derek@ihtfp.com>
 
 	* src/report/standard-reports/transaction.scm: Applied Tomas
