* src/business/business-reports/aging.scm: fix the percentage 	  calculations so we don't get GtkCritical warnings.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8242 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-21  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-reports/aging.scm: fix the percentage
+	  calculations so we don't get GtkCritical warnings.
+
 2003-04-21  Christian Stimming  <stimming@tuhh.de>
 
 	* po/de.po: Update German translation (latest transaction.scm
