2003-04-24  Christian Stimming  <stimming@tuhh.de>
	* po/ta.po: Initial Tamil translation by Ganesan Rajesh
	<ganesanrajish@eth.net>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8248 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-24  Christian Stimming  <stimming@tuhh.de>
+
+	* po/ta.po: Initial Tamil translation by Ganesan Rajesh
+	<ganesanrajish@eth.net>.
+
 2003-04-23  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/druid-hbci-initial.c: Adapt to latest
