2003-04-26  Christian Stimming  <stimming@tuhh.de>
	* po/zh_TW.po: Updated (complete!) Traditional Chinese translation
	by Chao-Hsiung Liao <pesder.liao@msa.hinet.net>


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8249 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-26  Christian Stimming  <stimming@tuhh.de>
+
+	* po/zh_TW.po: Updated (complete!) Traditional Chinese translation
+	by Chao-Hsiung Liao <pesder.liao@msa.hinet.net>
+
 2003-04-24  Christian Stimming  <stimming@tuhh.de>
 
 	* po/ta.po: Initial Tamil translation by Ganesan Rajesh
