--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-27  Derek Atkins  <derek@ihtfp.com>
+
+	* src/engine/test/Makefile.am: disable the test-scm-query-import
+	  test, since it breaks on guile-1.6 (which does mean that
+	  importing into a guile-1.6-based system will fail, but so much
+	  else fails when upgrading from 1.6 to 1.8 that it really doesn't
+	  matter.  Users will have to reset their reports anyways.
+
 2003-04-26  Christian Stimming  <stimming@tuhh.de>
 
 	* po/zh_TW.po: Updated (complete!) Traditional Chinese translation
